fixed layout issue

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -19,6 +19,9 @@ main::-webkit-scrollbar {
     height: 100vh;
     display: flex;
     align-items: center;
+    &__inner {
+        width: 100%;
+    }
     &__caption {
         text-transform: capitalize;
         font-size: 7 * $size;
